# Projet_CurelyticsIA

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_exploration_preprocessing_feature_extraction.ipynb  02_clustering_semi_supervised_cnn_training.ipynb
